syntax = "proto3";

package streaminterface;
option cc_enable_arenas = true;

message Instrument {

	enum InstrType 
	{
		EQUITY = 0;
		OPTION = 1;
		FUTURE = 2;
	}

	InstrType InstrumentType = 1;
	string UnderlyingSymbol = 2;

	int32 ExpirationDay = 3;
	int32 ExpirationMonth = 4;
	int32 ExpirationYear = 5;

	float Strike = 6;
	bool IsCallOption = 7;

}



message TradeMessage {
	
	uint64 Timestamp = 1;
	repeated Instrument Instruments = 2;
	
	float Price = 3;
	uint32 Size = 4;
	string Exchange = 5;

	float BidPriceBBO = 6;
	float AskPriceBBO = 7;
	uint32 BidSizeBBO = 8;
	uint32 AskSizeBBO = 9;
	string BidExchangeBBO = 10;
	string AskExchangeBBO = 11;

	float DaysHighestPrice = 12;
	float DaysLowestPrice = 13;
	float DaysOpeningPrice = 14;
	uint32 DaysTotalVolume = 15;

	//optional uint32 ConditionCodeNum = 16;

}

message MarketDepthLevel {

	float Price = 1;
	uint32 Size = 2;
	string Exchange = 3;

}

message BookDepthMessage {

	uint64 Timestamp = 1;
	repeated Instrument Instruments = 2;

	repeated MarketDepthLevel BidBookLevels = 3;
	repeated MarketDepthLevel AskBookLevels = 4;

	uint32 NumBidLevels = 5;
	uint32 NumAskLevels = 6;


}

message DebugInfo 
{

	uint64 MessageCreatedTimestamp = 1;
	uint64 MessageSentTimestamp = 2;
	uint64 MessageNumber = 3;
	string Other = 4; 
}
